[package]
name = "spritefusion-pixel-snapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rand_chacha = "0.3"

# Native CLI dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
